--- a/Hafta06/DotNetCore-VeriTabanıİslemleri/P01_SqlBağlantiOlusturma/.vscode/tasks.json
+++ b/Hafta06/DotNetCore-VeriTabanıİslemleri/P01_SqlBağlantiOlusturma/.vscode/tasks.json
@@ -7,7 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/01_SqlBağlantiOlusturma/P01_SqlBağlantiOlusturma.csproj",
+                "${workspaceFolder}/01_SqlBağlantiOlusturma.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -19,7 +19,7 @@
             "type": "process",
             "args": [
                 "publish",
-                "${workspaceFolder}/01_SqlBağlantiOlusturma/P01_SqlBağlantiOlusturma.csproj",
+                "${workspaceFolder}/01_SqlBağlantiOlusturma.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -33,7 +33,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/01_SqlBağlantiOlusturma/P01_SqlBağlantiOlusturma.csproj"
+                "${workspaceFolder}/01_SqlBağlantiOlusturma.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
