--- a/Hafta06/DotNetCore-VeriTabanıİslemleri/Proje02_VerilerinCekilmesi/.vscode/launch.json
+++ b/Hafta06/DotNetCore-VeriTabanıİslemleri/Proje02_VerilerinCekilmesi/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/01_SqlBağlantiOlusturma/bin/Debug/net6.0/P01_SqlBağlantiOlusturma.dll",
+            "program": "${workspaceFolder}/bin/Debug/net6.0/Proje02_VerilerinCekilmesi.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/01_SqlBağlantiOlusturma",
+            "cwd": "${workspaceFolder}",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
